<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.smartinhalerbluetooth.Reminder"
    tools:showIn="@layout/activity_main">


    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/recycler_view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--/>-->
    <!--<TextView-->
    <!--android:id="@+id/empty_text"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="100dp"-->
    <!--android:text="Add Your Inhaler Schedule!"-->
    <!--android:gravity="center"-->
    <!--android:textSize="35sp"-->
    <!--android:textColor="@color/black"-->
    <!--android:visibility="gone"/>-->

    <android.support.v7.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/numbering1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawableRight="@android:drawable/title_bar_tall"
                android:gravity="center"
                android:text="1."
                android:textColor="#000"
                android:textSize="@dimen/numbering_size" />

            <TextView
                android:id="@+id/alarm_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_label_text_size"
                android:text="@string/alarm_label_morning"
                android:textColor="@color/alarm_label_color"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_toEndOf="@+id/numbering1"
                />

            <TextView
                android:id="@+id/alarm_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_time_text_size"
                android:text="@string/alarm_time_morning"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textColor="@color/alarm_time_color"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/numbering1"
                android:layout_alignStart="@+id/alarm_label1"
                android:layout_below="@+id/alarm_label1" />

            <Button
                android:id="@+id/deleteButton1"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:clickable="true"
                android:visibility="gone"
                android:background="@drawable/ic_delete"
                />

        </RelativeLayout>






    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/cardview1"
        android:layout_margin="4dp"
        android:id="@+id/cardview2"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/numbering2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawableRight="@android:drawable/title_bar_tall"
                android:gravity="center"
                android:text="2."
                android:textColor="#000"
                android:textSize="@dimen/numbering_size" />

            <TextView
                android:id="@+id/alarm_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_label_text_size"
                android:text="@string/alarm_label_afternoon"
                android:textColor="@color/alarm_label_color"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_toEndOf="@+id/numbering2"
                />

            <TextView
                android:id="@+id/alarm_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_time_text_size"
                android:text="@string/alarm_time_afternoon"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textColor="@color/alarm_time_color"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/numbering2"
                android:layout_alignStart="@+id/alarm_label2"
                android:layout_below="@+id/alarm_label2" />

            <Button
                android:id="@+id/deleteButton2"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:clickable="true"
                android:visibility="gone"
                android:background="@drawable/ic_delete"
                />

        </RelativeLayout>






    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/cardview2"
        android:layout_margin="4dp"
        android:id="@+id/cardview3"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/numbering3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawableRight="@android:drawable/title_bar_tall"
                android:gravity="center"
                android:text="3."
                android:textColor="#000"
                android:textSize="@dimen/numbering_size" />

            <TextView
                android:id="@+id/alarm_label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_label_text_size"
                android:text="@string/alarm_label_evening"
                android:textColor="@color/alarm_label_color"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_toEndOf="@+id/numbering3"
                />

            <TextView
                android:id="@+id/alarm_time3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_time_text_size"
                android:text="@string/alarm_time_evening"
                android:layout_margin="4dp"
                android:textColor="@color/alarm_time_color"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/numbering3"
                android:layout_alignStart="@+id/alarm_label3"
                android:layout_below="@+id/alarm_label3" />

            <Button
                android:id="@+id/deleteButton3"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@drawable/ic_delete"
                />

        </RelativeLayout>






    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/cardview3"
        android:layout_margin="4dp"
        android:id="@+id/cardview4"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/numbering4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawableRight="@android:drawable/title_bar_tall"
                android:gravity="center"
                android:text="4."
                android:textColor="#000"
                android:textSize="@dimen/numbering_size" />

            <TextView
                android:id="@+id/alarm_label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_label_text_size"
                android:text="@string/alarm_label_reminder_1"
                android:textColor="@color/alarm_label_color"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_toEndOf="@+id/numbering4"
                />

            <TextView
                android:id="@+id/alarm_time4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_time_text_size"
                android:text="@string/alarm_time_reminder_1"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textColor="@color/alarm_time_color"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/numbering4"
                android:layout_alignStart="@+id/alarm_label4"
                android:layout_below="@+id/alarm_label4" />

            <Button
                android:id="@+id/deleteButton4"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@drawable/ic_delete"
                />

        </RelativeLayout>






    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/cardview4"
        android:layout_margin="4dp"
        android:id="@+id/cardview5"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/numbering5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawableRight="@android:drawable/title_bar_tall"
                android:gravity="center"
                android:text="5."
                android:textColor="#000"
                android:textSize="@dimen/numbering_size" />

            <TextView
                android:id="@+id/alarm_label5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alarm_label_text_size"
                android:text="@string/alarm_label_reminder_2"
                android:textColor="@color/alarm_label_color"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_toEndOf="@+id/numbering5"
                />

            <TextView
                android:id="@+id/alarm_time5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/alarm_time_color"
                android:textSize="@dimen/alarm_time_text_size"
                android:text="@string/alarm_time_reminder_2"
                android:layout_margin="4dp"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/numbering5"
                android:layout_alignStart="@+id/alarm_label5"
                android:layout_below="@+id/alarm_label5" />

            <Button
                android:id="@+id/deleteButton5"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@drawable/ic_delete"
                />

        </RelativeLayout>






    </android.support.v7.widget.CardView>
</RelativeLayout>
